--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Electrical Engineering</h2>
 <h2><a class="anchor" id="autotoc_md3"></a>
 Computer Engineering</h2>
 <ul>
-<li>Connor DeCamp (code author)</li>
+<li>Connor DeCamp</li>
 </ul>
 <h1><a class="anchor" id="autotoc_md4"></a>
 Project Abstract</h1>
