--- a/namespaceutility.html
+++ b/namespaceutility.html
@@ -70,9 +70,6 @@ $(function() {
 <div class="title">utility Namespace Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
-
-<p>Provides simple network utility functions.  
-<a href="namespaceutility.html#details">More...</a></p>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="nested-classes"></a>
 Classes</h2></td></tr>
@@ -88,19 +85,7 @@ Functions</h2></td></tr>
 <tr class="memdesc:aa4f93350a1028c72f24cd40bff054537"><td class="mdescLeft">&#160;</td><td class="mdescRight">This method retrieves the host machine's IP address on the local area network.  <a href="namespaceutility.html#aa4f93350a1028c72f24cd40bff054537">More...</a><br /></td></tr>
 <tr class="separator:aa4f93350a1028c72f24cd40bff054537"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
-<a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><p>Provides simple network utility functions. </p>
-<h1><a class="anchor" id="file_author"></a>
-Author</h1>
-<ul>
-<li>Created on 08/10/21 by Connor DeCamp </li>
-</ul>
-<h1><a class="anchor" id="mod_history"></a>
-Modification History</h1>
-<ul>
-<li>Modified on 10/21/21 by Connor DeCamp </li>
-</ul>
-</div><h2 class="groupheader">Function Documentation</h2>
+<h2 class="groupheader">Function Documentation</h2>
 <a id="a88e8481718095ac4b21c2d5214e18048"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a88e8481718095ac4b21c2d5214e18048">&#9670;&nbsp;</a></span>get_LAN_broadcast_address()</h2>
 
